--- a/mirror.html
+++ b/mirror.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive Mirror Hacker ~0</title>
 </head>
-<body onload="muatSemuaArchive()">
+<body>
     <div class="container">
         <h1>Archive Mirror Hacker ~0</h1>
         <div class="info-input">
@@ -36,7 +36,7 @@
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-      import { getDatabase, ref, push, once, get } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-database.js";
+      import { getDatabase, ref, push, get } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-database.js";
 
       // Your web app's Firebase configuration
       const firebaseConfig = {
@@ -94,7 +94,7 @@
           allArchiveContainer.innerHTML = '<p>Memuat archive...</p>';
 
           try {
-              const snapshot = await once(archivesRef);
+              const snapshot = await get(archivesRef);
               const archives = snapshot.val();
               let html = '';
 
@@ -129,6 +129,8 @@
               allArchiveContainer.innerHTML = '<p>Gagal memuat archive.</p>';
           }
       }
+
+      window.addEventListener('load', muatSemuaArchive);
     </script>
 </body>
 </html>
