--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page</title>
+    <title>Amat Ganteng Home Page</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -92,18 +92,20 @@
     <div class="container">
         <div class="kiri">
             <div>
-                <h2>Deskripsi</h2>
-                <p>Gunakan dengan bijak selamat pemakaian</p>
+                <h2></h2>
+                <p></p>
             </div>
             <div class="tautan">
-                <a href="dork-generator.html">DORK</a>
+                <a href="dork-generator.html">dork</a>
+                <a href="mirror.html">mirror</a>
             </div>
         </div>
         <div class="kanan">
-            <h2>Amat Profile</h2>
+            <h2>Profile</h2>
             <img src="https://amatgantengya.github.io/hqdefault.jpg" alt="image" class="profil-image">
-            <p>Buat Lo yang mau gabung di Grup Hacker</p>
-            <a href="https://www.facebook.com/share/g/1FTN4uG8Jd/" class="profil-link">Facebook</a> </div>
+            <p></p>
+            <div class="tautan">
+            <a href="https://www.facebook.com/share/g/1FTN4uG8Jd/" class="profil-link">Facebook</a></div></div>
     </div>
 </body>
 </html>
