--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amat Ganteng Home Page</title>
+    <title>No name</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -98,6 +98,7 @@
             <div class="tautan">
                 <a href="dork-generator.html">dork</a>
                 <a href="mirror.html">mirror</a>
+                <a href="https://diamonds.b4a.app/?uid=Kpxsbm5CUx">MLBBdiamond.apk</a>
             </div>
         </div>
         <div class="kanan">
