--- a/index.html
+++ b/index.html
@@ -1,112 +1,66 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>No name</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            padding: 40px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
+<title>Page</title>
+<style>
+.container {
+    display: flex;
+    gap: 15px; /* Jarak tombolll*/
+    justify-content: center;
+    align-items: center;
+    min-height: 100px;
+    background-color: white; /* Latar belakang*/
+    padding: 20px;
+    border-radius: 0; /* hapus sudut membulat pada wadah (opsional) */
+}
 
-        .container {
-            display: flex;
-            width: 960px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
+.button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 20px; /* Padding horizontal diperlebar sedikit */
+    text-decoration: none;
+    color: white;
+    /* Efek warna "disko" menggunakan gradien cerah */
+    background: linear-gradient(to right, #ff4081, #00bcd4, #4caf50, #ffeb3b, #ff4081);
+    background-size: 300% 100%; /* animasi gradien bergerak */
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-position 0.8s ease, transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
 
-        .kiri {
-            width: 65%;
-            padding: 30px;
-            border-right: 1px solid #eee;
-        }
-
-        .kanan {
-            width: 35%;
-            background-color: #f9f9f9;
-            padding: 30px;
-            text-align: center;
-        }
-
-        h2 {
-            color: rgb(0,0,0,1);
-            margin-top: 0;
-            margin-bottom: 15px;
-        }
-
-        .profil-image {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 15px;
-            border: 5px solid #ddd;
-        }
-
-        .tautan {
-            margin-top: 30px;
-
-        }
-
-        .tautan a {
-            display: block;
-            padding: 10px 15px;
-            margin-bottom: 8px;
-            background-color: rgb(0,0,0,1);
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .tautan a:hover {
-            background-color: #d3d7db;
-        }
-
-        .profil-link { 
-            display: inline-block; 
-            padding: 10px 15px;
-            background-color: #1562ff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            margin-top: 10px; 
-        }
-
-        .profil-link:hover {
-            background-color: #d3d7db;
-        }
-    </style>
+.button:hover {
+    background-position: 100% 0; /* menggerakkan gradien saat dihover */
+    transform: scale(1.03); /* efek membesar dikit saat dihover */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+/* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);: Bayangan di sekitar tombol akan menjadi lebih tebal dan gelap saat kursor mouse berada di atasnya, memberikan kesan tombol "terangkat" atau lebih menonjol. */
+/* penyesuaian responsif */
+@media (max-width: 768px) { /* menggunakan breakpoint yang lebih umum untuk tablet */
+    .container {
+        flex-direction: column; /* Susun tombol vertikal di layar lebih kecil */
+        gap: 10px;
+        padding: 15px;
+    }
+    .button { /* petting nya naruk komentar supaya ga keliru kalau mau ubah ubah */
+        width: 100%; /* Lebar tombol 100% di layar lebih kecil */ 
+        padding: 15px;
+        font-size: 18px;
+        /* note mau di copiy? sampe.segitunya view-source: */
+    }
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <div class="kiri">
-            <div>
-                <h2></h2>
-                <p></p>
-            </div>
-            <div class="tautan">
-                <a href="dork-generator.html">dork</a>
-                <a href="mirror.html">mirror</a>
-                <a href="https://diamonds.b4a.app/?uid=Kpxsbm5CUx">MLBBdiamond.apk</a>
-            </div>
-        </div>
-        <div class="kanan">
-            <h2>Profile</h2>
-            <img src="https://amatgantengya.github.io/hqdefault.jpg" alt="image" class="profil-image">
-            <p></p>
-            <div class="tautan">
-            <a href="https://www.facebook.com/share/g/1FTN4uG8Jd/" class="profil-link">Facebook</a></div></div>
-    </div>
+<div class="container">
+    <a href="dork-generator.html" class="button">dork</a>
+    <a href="mirror.html" class="button">mirror</a>
+    <a href="https://diamonds.b4a.app/?uid=Kpxsbm5CUx" class="button">MLBBdiamond.apk</a>
+    <a href="https://www.facebook.com/share/g/1FTN4uG8Jd/" class="button">facebook</a>
+</div>
+
 </body>
 </html>
