--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="description" content="Dork Generator diamond MLBB">
 <title>Page</title>
 <style>
 .container {
