--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="description" content="Dork Generator diamond MLBB">
+<meta name="description" content="Dork Generator &diamond MLBB.Apk">
 <title>Page</title>
 <style>
 .container {
