--- a/dork-generator.html
+++ b/dork-generator.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dork Generator &diamond MLBB.Apk">
     <title>Dork Generator</title>
     <style>
         body {
